tests/type-reconstruction/ill-typed/infinite-type/infinite-type-4.stella
language core;
extend with #type-reconstruction;

fn main(a : Nat) -> auto {
  return main
}
